tests/machine/x/clj/save_jsonl_stdout.error
exit status 1
Syntax error compiling at (/workspace/mochi/tests/machine/x/clj/save_jsonl_stdout.clj:25:19).
Unable to resolve symbol: _to_json in this context

Full report at:
/tmp/clojure-5709161467657031750.edn
